fix: adaptive slider gap fix

--- a/src/sass/layout/_calculator.scss
+++ b/src/sass/layout/_calculator.scss
@@ -97,7 +97,7 @@
 
 .calculator__slider--adaptive {
   @include media-sm {
-    width: 12.75rem;
+    width: 12rem;
   }
 }
 
